cut out research courses

--- a/README.Rmd
+++ b/README.Rmd
@@ -33,6 +33,7 @@ Check out the [Sustainability Course Finder](https://usc-sustainability.shinyapp
 - [General Education](#general-education)
 - [Creating Shiny App](#creating-shiny-app)
 - [Creating a Readme / Github Repo](Creating-a-Readme-/-Github-Repo)
+- [Updating Data / Shiny App](#updating-data-/-shiny-app)
 - [Questions?](#questions)
 
 
@@ -112,7 +113,7 @@ keywords$weight = 1
 # make everything lower case
 keywords$keyword = tolower(keywords$keyword)
 keywords$pattern = tolower(keywords$pattern)
-# get rd of duplicates
+# get rid of duplicates
 keywords = keywords[!duplicated(keywords), ]
 
 write.csv(keywords, "usc_keywords.csv", row.names=F)
@@ -123,7 +124,7 @@ write.csv(keywords, "usc_keywords.csv", row.names=F)
 While I do not expect another school's data to be of the same format as the raw files at USC, I am still including some details on how we cleaned the files in hopes that it may address some common problems others might have with their data.  
 
 <!-- add link to a file? -->
-Course data was retrieved from the USC’s Office of Academic Records and Registrar, and the raw data files, as well as the R scripts to clean them, can be found in the `cleaning_raw_data` folder.
+Course data was retrieved from the USC’s Office of Academic Records and Registrar, and the raw data files, as well as the R scripts to clean them, can be found in the `cleaning_raw_data` folder and inside the `raw_usc_data` folder.
 These files had lots of problems with spacing and column names, and we addressed these issues in `cleaning_scattered_files.R`.  
 
 <!-- show the dataframe -->
@@ -187,10 +188,23 @@ master_df$COURSE_CODE = trimws(master_df$COURSE_CODE, which = c("right"))
 write.csv(master_df, "combined_data.csv", row.names=FALSE)
 ```
 
-In the next R file, `cleaning_2020-2023.R`, we read in the combined clean CSV and reformat it.
-We change column names, count the number of students and sections for each section, cut out research courses, and we create the "semester," "all_semesters," and "course_level" columns. To see this code please see the R script. 
+In the next R file, `cleaning_2020-2023.R`, we read in the combined clean CSV and reformat it. In this file, we change column names, count the number of students and sections for each section, cut out research courses, and we create the "semester," "all_semesters," and "course_level" columns. To see this code please see the R script. In this script, some of the cleaning is done in one function, `clean_data`, and some cleaning processes are done with helper functions like `get_semesters` and `get_class_levels`.
 
-There is an R script in the same directory that shows you how to add a course to the dataframe `adding_course.R`. It is important that you include ALL COLUMNS when adding new entries -- otherwise the data will be messy. 
+One important piece of this file is excluding certain courses, such as "Directed Research" or "Master's Thesis" course titles. You can add any generic course descriptions you wish to exclude with the following code inside the cleaning function:
+
+```{r}
+data_clean = raw_data[trimws(raw_data$COURSE_TITLE) !=  "Directed Research"
+                      & trimws(raw_data$COURSE_TITLE) !=  "Master's Thesis" 
+                      & trimws(raw_data$COURSE_TITLE) !=  "Doctoral Dissertation"
+                      & trimws(raw_data$COURSE_TITLE) !=  "Research"
+                      , ]
+```
+
+Note that when you make an update to data like such, you must go and rerun the next R scripts with the new data to update all of the data frames for the shiny app. 
+Once we create the cleaned `usc_courses.csv`, we duplicate it and move it up one directory so that we can run more code on it.
+
+In the above directory, `cleaning_raw_data`, there is an R script that shows you how to add a course to the dataframe `adding_course.R`. It is important that you include ALL COLUMNS when adding new entries -- otherwise the data will get messy. 
+
 
 ## Cleaning Course Descriptions
 
@@ -214,6 +228,18 @@ for (i in 1:nrow(usc_courses)){
 ```
 
 To account for context dependencies either before a word or after a word, follow the model in the file, and ensure to convert words to lowercase and trim whitespace. 
+
+Once we have the output from this cleaning, `usc_courses_cleaned.csv`, we duplicate it and move it to the `data` directory where we will be working from now on. Now, all of our R scripts will be from the ` R ` directory and our data will be in this data directory. To make sure that your output files are created in the correct folder, use the `setwd()` function like this:
+
+```{r}
+# check current directory
+getwd()
+# change the working directory
+setwd("/Users/btinsley/Desktop/USC-SDGmap/data")
+# check out the files in the folder
+list.files()
+```
+
 
 ## Mapping Course Descriptions
 
@@ -343,6 +369,13 @@ To make a github repository, follow [this tutorial](https://docs.github.com/en/g
 
 To create a Readme, familiarize yourself with [Markdown](https://www.markdownguide.org/getting-started) and [R Markdown](https://rmarkdown.rstudio.com/articles_intro.html). In `.Rmd` (R Markdown) files, you can specify the `output` of the document to be a `github_document` and when you "knit" the `.Rmd` file, it will automatically generate a `.md` (markdown) file in the directory which will be displayed on your github page! You can also refer to my README.Rmd file to see how I created this readme file.
 
+
+
+## Updating Data / Shiny App
+
+When the keywords or course data is updated, the way I have been updating the shiny app is by rerunning all of the files in order with the new data. When doing so, remove the old files from the `Data` folder and the `Shiny_app` folder, but I recommend storing them in a backup folder elsewhere in the case that the new run of code doesn't work. 
+
+Which files you will have to rerun is determined by what data you are updating. If the raw course data is updated, you will need to start from the beginning and clean and combine all of the school data again. Similarly, if you are adding / fixing keyword mapping issues with context dependencies, you will need to clean the course data again. If you are only updating the keywords list, then you only need to rerun code starting at the mapping of course descriptions. 
 
 ## Questions?
 
